css/style.css
*,
*::before,
*::after {
  margin: 0;
  padding: 0;
  box-sizing: inherit; }

html {
  box-sizing: border-box;
  font-size: 62.5%; }
  @media screen and (max-width: 1200px) {
    html {
      font-size: 55%; } }

body {
  overflow-x: hidden; }

body {
  font-family: "Poppins", sans-serif;
  font-weight: 300;
  color: #444;
  line-height: 1.9; }

.kickstarter {
  background-color: #05ce78;
  height: 6rem;
  position: sticky;
  top: 9rem;
  display: flex;
  justify-content: center;
  align-items: center; }
  .kickstarter-2 {
    display: none; }
  @media screen and (max-width: 600px) {
    .kickstarter-2 {
      height: 4rem;
      height: 12rem;
      display: block;
      filter: brightness(0) invert(1);
      margin: 0 4rem 0 4rem; } }
  .kickstarter-1 {
    transition: top 0.3s ease;
    position: sticky;
    top: 9rem;
    height: 6rem;
    width: 100%;
    display: flex;
    justify-content: center;
    align-items: center;
    font-size: 2.4rem;
    font-weight: 600; }
    @media screen and (max-width: 1000px) {
      .kickstarter-1 {
        font-size: 2rem; } }
    @media screen and (max-width: 800px) {
      .kickstarter-1 {
        font-size: 1.4rem; } }
    @media screen and (max-width: 600px) {
      .kickstarter-1 {
        display: none; } }
    .kickstarter-1-logo-1 {
      height: 90%;
      filter: brightness(0) invert(1);
      margin: 0 4rem 0 4rem; }

.box-0 {
  position: fixed;
  top: 0;
  display: flex;
  justify-content: center;
  align-items: center;
  height: 9rem;
  width: 100dvw;
  z-index: 100;
  background: linear-gradient(90deg, #0582ca, #00a6fb); }

.nav {
  max-width: 984px;
  width: 100%;
  margin: 0 auto;
  padding: 0 2rem 0rem 2rem;
  display: flex;
  align-items: center;
  justify-self: space-between; }
  .nav-logo {
    font-size: 5rem;
    font-weight: 500;
    color: #f3f3f3;
    border-radius: 20rem;
    margin-right: auto; }
  .nav-svg {
    height: 5rem;
    fill: #f3f3f3; }

.nav.sticky {
  position: fixed;
  background-color: rgba(255, 255, 255, 0.95); }

  .footer {
    background-color: #2e2e2e;
    font-family: inherit;
    padding: 5rem 3rem;
    display: flex;
    flex-direction: row;
    flex-wrap: wrap;
    justify-content: center;
    gap: 4rem; }
    .footer__side1 {
      display: flex;
      flex-direction: column;
      margin-right: 8rem;
      gap: 3rem; }
      .footer__side1__logo {
        font-size: 4rem;
        font-weight: 500;
        color: #0582ca; }
      .footer__side1__text {
        font-size: 1.6rem;
        margin-bottom: -1.5rem;
        color: #e4e4e4; }
    .footer__side2 {
      display: flex;
      gap: 4rem;
      justify-content: center;
      text-align: center; }
      .footer__side2__nav {
        width: 20;
        list-style: none;
        justify-content: center; }
      .footer__side2__item {
        margin-right: 4rem;
        color: #000; }
        @media screen and (max-width: 500px) {
          .footer__side2__item {
            margin-right: 0; } }
      .footer__side2__linkheader {
        min-width: 5rem;
        font-size: 1.65rem;
        font-weight: 600;
        color: #b1b1b1;
        text-decoration: none; }
        @media screen and (max-width: 500px) {
          .footer__side2__linkheader {
            margin-right: 0rem;
            min-width: 0rem; } }
      .footer__side2__link {
        min-width: 5rem;
        font-size: 1.6rem;
        color: #f7f7f7;
        text-decoration: none; }
        .footer__side2__link:hover {
          text-decoration: underline; }
    .footer__img {
      display: flex;
      width: 100%;
      justify-content: center; }
      @media screen and (max-width: 600px) {
        .footer__img {
          transform: scale(0.75);
          width: 70%; } }
      .footer__img-1 {
        transform: scale(0.85); }
        @media screen and (max-width: 600px) {
          .footer__img-1 {
            transform: scale(0.65);
            height: 100%;
            width: 100%; } }
      .footer__img-2 {
        transform: scale(0.85); }
        @media screen and (max-width: 600px) {
          .footer__img-2 {
            transform: scale(0.65);
            height: 100%;
            width: 100%; } }
    .footer__copyright {
      font-size: 1.4rem;
      color: #a1a1a1;
      text-align: center;
      width: 100%; }
    .footer__link {
      font-size: 1.4rem;
      text-decoration: none; }

.section--1 {
  display: flex;
  justify-content: center;
  margin-top: 9rem;
  padding-bottom: 10rem;
  height: fit-content;
  width: 100%;
  background: linear-gradient(to top right, #072536, #0582ca, #00a6fb); }

  .box1 {
    padding-top: 5rem;
    display: flex;
    justify-content: center;
    flex-direction: row;
    margin: 0 auto;
    gap: 8rem; }
    @media screen and (max-width: 1000px) {
      .box1 {
        margin: 0 auto;
        flex-direction: column;
        justify-content: center;
        align-items: center; } }
    .box1-side1 {
      display: flex;
      flex-direction: column;
      align-self: center;
      max-width: 64rem; }
      @media screen and (max-width: 1000px) {
        .box1-side1 {
          justify-content: center;
          align-items: center; } }
      .box1-side1-title-1 {
        color: #cadadc;
        line-height: 1; }
      .box1-side1-title-2 {
        color: #f3f3f3;
        font-size: 7rem;
        line-height: 1.5; }
      .box1-side1-title-3 {
        color: #f3f3f3;
        font-size: 6rem;
        font-weight: 500;
        line-height: 0.8;
        margin-bottom: 3rem; }
      .box1-side1-title-4 {
        margin-bottom: 3rem;
        color: #f3f3f3; }
        @media screen and (max-width: 1000px) {
          .box1-side1-title-4 {
            justify-content: center;
            align-items: center;
            text-align: center; } }
    .box1-side2 img {
      border-radius: 3.5rem;
      background-color: rgba(3, 72, 111, 0.9);
      max-width: 100%;
      max-height: 100%;
      overflow: hidden;
      box-shadow: rgba(0, 0, 0, 0.56) 0px 22px 70px 4px; }
      .box1-side2 img__phone {
        width: 223px;
        height: 450px; }
  
  @media screen and (max-width: 480px) {
    .box1-side1-title-2 {
      font-size: 5rem; }
    .box1-side1-title-3 {
      font-size: 4rem; }
    .box1-side1-title-4 {
      font-size: 1.3rem; } }
  
  .btn {
    margin-left: 2rem;
    margin-top: 2rem;
    background-color: white;
    font-size: 1.9rem;
    font-family: inherit;
    font-weight: 600;
    border: none;
    padding: 1.25rem 4.5rem;
    border-radius: 10rem;
    cursor: pointer;
    transition: all 0.3s;
    text-transform: uppercase;
    color: #0a75b4;
    box-shadow: rgba(0, 0, 0, 0.25) 0px 25px 50px -12px;
    width: 27rem; }
    @media screen and (max-width: 1000px) {
      .btn {
        margin-left: 0; } }
    .btn:hover {
      background-color: rgba(255, 255, 255, 0.823); }
    .btn:active {
      transform: translateY(0.5rem);
      scale: 0.98; }
  
  .btn-demo {
    margin-left: 2rem;
    margin-top: 2rem;
    background-color: #66d370;
    font-size: 1.9rem;
    font-family: inherit;
    font-weight: 600;
    border: none;
    padding: 1.25rem 4.5rem;
    border-radius: 10rem;
    cursor: pointer;
    transition: all 0.3s;
    text-transform: uppercase;
    box-shadow: rgba(0, 0, 0, 0.25) 0px 25px 50px -12px;
    width: 27rem; }
    @media screen and (max-width: 1000px) {
      .btn-demo {
        margin-left: 0; } }
    .btn-demo:hover {
      background-color: #05ce78; }
    .btn-demo:active {
      transform: translateY(0.5rem);
      scale: 0.98; }
    .btn-demo-1 {
      text-decoration: none;
      color: #ffffff; }
  
  @media screen and (max-width: 1000px) {
    .btn-centre {
      display: flex;
      justify-content: center;
      flex-direction: column;
      margin-left: 0; } }
  
  @media screen and (max-width: 580px) {
    .box1-side1-title-4 {
      font-size: 1.3rem;
      padding: 0rem 3rem; } }

.section--3 {
  background: whitesmoke; }
  .section--3 .section__title {
    text-align: start;
    margin-bottom: 4rem; }
    .section--3 .section__title__description {
      font-size: 1.8rem;
      color: #2c2c2c;
      margin: 0 24.7% 0 24.7%; }
    .section--3 .section__title__header {
      text-align: center;
      font-size: 6rem;
      /* margin-left: 24.7%; */
      padding-top: 6rem;
      color: #2c2c2c; }
      
  .section--3 .features {
    display: flex;
    justify-content: center;
    padding-bottom: 5rem;
    margin: 0 25%; }

    .section--3 .features__icon {
      display: flex;
      justify-content: center;
      padding-bottom: 5rem;
      margin: 0 25%; }

    .section--3 .features__img2 {
      border-radius: 2rem;
      margin-left: 20px;
      height: 60rem;
    }

    
    .section--3 .features__header {
      font-size: 2rem;
      margin-bottom: 1rem;
      color: #2c2c2c; }
    .section--3 .features__p {
      font-size: 2rem;
      margin-bottom: 1rem;
      color: #2c2c2c; }

.section4 {
  height: 30rem;
  background: linear-gradient(to bottom right, #072536, #0582ca, #00a6fb); 
  justify-content: center;
  display: flex;
  align-items: center;
  flex-direction: column;
  
}

.sect4head {
  display: flex;
  align-items: center;
  gap: 1rem;
}

.sect4h3{
  color: white;
  text-align: center;
  
  font-size: 5rem;
  
}

.waterdroplet{
  display: inline;
 height: 3rem;
 width: 3rem;
}

.sect4p{
  color: white;
  text-align: center;
  font-size: 1.5rem;
  
}
 
.section--2 {
  justify-content: center;
  display: flex;
    align-items: center;
    flex-direction: column;
  height: 30rem;
  background-color: #1d1d1d;
  font-size: 6rem; }

.section--2__text {
  color: white; }

  .sect2h3{
    color: white;
    text-align: center;
    font-size: 5rem;
  }

  .sect2p{
    text-align: center;
    font-size: 2rem;
    padding-bottom: 3rem;
  }

  .sect2p2{
    text-align: center;
    font-size: 3rem;
  }

.emphasis1{
 color: #0a75b4;
 font-weight: bold;
}

.emphasis2{
  color: orange;
  font-weight: bold;
}

.section5 {
  height: 80rem;
  background: whitesmoke;
  justify-content: center;
  display: flex;
  align-items: center;
  flex-direction: column; }

  .sect5h3{
    color:#2c2c2c;
    text-align: center;
    font-size: 5rem;
  }

.sect5p{
  text-align: center;
  font-size: 2rem;
  padding-bottom: 3rem;
}

.sect5p2{
  font-size: 3rem;
}

.exercisesuggest{
  max-width: 100%;
  max-height: 450px;
}

.section--6 {
  justify-content: center;
  display: flex;
    align-items: center;
    flex-direction: column;
  height: 30rem;
  background-color: #1d1d1d;
  font-size: 6rem; }

.section--6__text {
  color: white; }

  .sect6h3{
    color: white;
    text-align: center;
    font-size: 5rem;
  }

  .sect6p{
    text-align: center;
    font-size: 2rem;
    padding-bottom: 3rem;
  }

  .sect6p2{
    text-align: center;
    font-size: 3rem;
  }

